# dof-chat

./: CONTRIBUTING.md  README.md  config.py  create_test_user.py  database.py  init_db.py  main.py  models.py  pyproject.toml  rag_service.py  schemas.py
.github/: pull_request_template.md
components/: __init__.py  chat_message.py  conversation_card.py  login_form.py
pages/: __init__.py  conversation_new.py  index.py  login.py
routers/: __init__.py  api.py  auth.py  web.py
services/: __init__.py  vector_db_service.py
static/css/: chat.css  context.css
static/js/: chat.js
ui/: __init__.py  button.py  card.py  form.py  input.py
utils/: __init__.py  context_renderer.py  logger.py
