[project]
name = "dof-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "air>=0.38.1",
    "airclerk>=0.1.0",
    "fastapi[standard]>=0.120.0",
    "accelerate>=1.11.0",
    "duckdb>=1.4.1",
    "google-genai>=0.3.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
]
